--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     #dynamicText {
       display: inline-block;
       margin-left: 10px;
-      color: #ff6666;
+      color: #ff6666; /* أحمر فاتح */
       font-size: 48px;
       font-weight: normal;
       user-select: text;
@@ -135,6 +135,7 @@
       'tool1': ' Tool One',
       'tool2': ' Tool Two',
       'example': ' Example Text',
+      'test': ' test'  // ← أضفت هذه القيمة
     };
 
     function updateDynamicText() {
