--- a/index.html
+++ b/index.html
@@ -21,15 +21,9 @@
     }
 
     @keyframes waveBackground {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .text-header {
@@ -64,7 +58,6 @@
       font-size: 48px;
       margin: 0;
       position: relative;
-      margin-left: -250px; /* ← تم التعديل هنا */
       color: rgba(0, 60, 255, 0.5);
       user-select: text;
       pointer-events: auto;
@@ -72,13 +65,15 @@
     }
 
     #dynamicText {
-      display: inline-block;
-      margin-left: 10px;
-      color: #ff6666; /* أحمر فاتح */
-      font-size: 48px;
+      display: block; /* ↓ صار تحت كلمة Is */
+      margin-top: 10px;
+      color: #ff6666;
+      font-size: 36px;
       font-weight: normal;
       user-select: text;
       pointer-events: auto;
+      line-height: 1.6;
+      text-align: center;
     }
 
     .center-container {
@@ -115,7 +110,8 @@
       <span class="brand-word">Brand</span>
     </h1>
     <h1 class="line2">
-      Is<span id="dynamicText"></span>
+      Is
+      <span id="dynamicText"></span>
     </h1>
   </div>
 
@@ -134,8 +130,15 @@
       const id = getIdFromUrl();
       const dynamicTextElem = document.getElementById('dynamicText');
       if (id) {
-        // هنا نعرض النص مباشرة بدون فلترة
-        dynamicTextElem.textContent = ' ' + id;
+        const words = id.split(" ");
+        let formattedText = "";
+        words.forEach((word, index) => {
+          formattedText += word + " ";
+          if ((index + 1) % 3 === 0) {
+            formattedText += "<br>"; // كل 3 كلمات ينزل لسطر
+          }
+        });
+        dynamicTextElem.innerHTML = formattedText.trim();
       } else {
         dynamicTextElem.textContent = '';
       }
