--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     }
 
     #dynamicText {
-      display: block; /* ↓ صار تحت كلمة Is */
-      margin-top: 10px;
-      color: #ff6666;
-      font-size: 36px;
-      font-weight: normal;
+      display: block;
+      margin-top: 40px; /* سطرين تقريباً */
+      color: #cc0000;   /* أحمر أغمق */
+      font-size: 52px;  /* أكبر من قبل */
+      font-weight: bold;
       user-select: text;
       pointer-events: auto;
       line-height: 1.6;
