--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
     #dynamicText {
       display: block;
-      margin-top: 40px; /* سطرين تقريباً */
-      color: #cc0000;   /* أحمر أغمق */
-      font-size: 52px;  /* أكبر من قبل */
+      margin-top: 100px; /* خمسة أسطر تقريباً */
+      color: #990000;   /* أحمر غامق */
+      font-size: 52px;  /* أكبر قليلاً */
       font-weight: bold;
       user-select: text;
       pointer-events: auto;
