--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
     #dynamicText {
       display: block;
-      margin-top: 100px; /* خمسة أسطر تقريباً */
-      color: #990000;   /* أحمر غامق */
-      font-size: 52px;  /* أكبر قليلاً */
+      margin-top: 160px; /* ثمان أسطر تقريباً */
+      color: #800000;   /* أحمر غامق أكثر */
+      font-size: 52px;  /* كبير */
       font-weight: bold;
       user-select: text;
       pointer-events: auto;
