--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <script>
     // ----------------------------------------
     // 1️⃣ قائمة الشرائح المسموح بها (UID)
-    const allowedUIDs = ["04A2243B112233"]; // ضع UID الخاص بشريحتك هنا
+    const allowedUIDs = ["04:3B:7F:A2:A5:1C:90"]; // ضع UID الخاص بشريحتك هنا
 
     // ----------------------------------------
     // 2️⃣ دالة لقراءة NFC والتحقق من UID
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
