--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
       background-size: 400% 400%;
       animation: waveBackground 15s ease infinite;
       position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     @keyframes waveBackground {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
+    }
+
+    /* كل المحتوى مخفي افتراضياً */
+    .text-header, .center-container {
+      display: none;
     }
 
     .text-header {
@@ -38,71 +46,22 @@
       user-select: none;
     }
 
-    .text-header .line1 {
-      font-size: 48px;
-      margin: 0;
-      letter-spacing: 4px;
-      white-space: nowrap;
-    }
+    .text-header .line1 { font-size: 48px; margin: 0; letter-spacing: 4px; white-space: nowrap; }
+    .text-header .this-word { display: inline-block; }
+    .text-header .brand-word { display: inline-block; margin-left: 10px; }
+    .text-header .line2 { font-size: 48px; margin: 0; color: rgba(0, 60, 255, 0.5); white-space: nowrap; }
+    #dynamicText { display: block; margin-top: 160px; color: #800000; font-size: 52px; font-weight: bold; text-align: center; }
 
-    .text-header .this-word {
-      display: inline-block;
-    }
+    .center-container { position: absolute; top: 65%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: flex-start; gap: 20px; z-index: 2; pointer-events: none; }
+    .watermark { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); transform: translateY(40px); }
+    .big-check { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); }
 
-    .text-header .brand-word {
-      display: inline-block;
-      margin-left: 10px;
-    }
-
-    .text-header .line2 {
-      font-size: 48px;
-      margin: 0;
-      position: relative;
-      color: rgba(0, 60, 255, 0.5);
-      user-select: text;
-      pointer-events: auto;
-      white-space: nowrap;
-    }
-
-    #dynamicText {
-      display: block;
-      margin-top: 160px; /* ثمان أسطر تقريباً */
-      color: #800000;   /* أحمر غامق أكثر */
-      font-size: 52px;  /* كبير */
-      font-weight: bold;
-      user-select: text;
-      pointer-events: auto;
-      line-height: 1.6;
-      text-align: center;
-    }
-
-    .center-container {
-      position: absolute;
-      top: 65%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
-      z-index: 2;
-      pointer-events: none;
-    }
-
-    .watermark {
-      font-size: 200px;
-      font-weight: bold;
-      color: rgba(0, 60, 255, 0.2);
-      transform: translateY(40px);
-    }
-
-    .big-check {
-      font-size: 200px;
-      font-weight: bold;
-      color: rgba(0, 60, 255, 0.2);
-    }
+    #nfcMessage { color: #000; font-size: 32px; font-weight: bold; text-align: center; }
   </style>
 </head>
 <body>
+
+  <div id="nfcMessage">انتظر لمس شريحة NFC المصرح بها...</div>
 
   <div class="text-header">
     <h1 class="line1">
@@ -121,6 +80,36 @@
   </div>
 
   <script>
+    // ضع الرقم التسلسلي للشريحة المصرح بها هنا (بدون نقط أو مسافات، بأحرف كبيرة)
+    const authorizedUIDs = ["043B11C53F80"]; // مثال لشريحة واحدة
+
+    async function scanNFC() {
+      if ('NDEFReader' in window) {
+        try {
+          const ndef = new NDEFReader();
+          await ndef.scan();
+
+          ndef.onreading = event => {
+            const uid = Array.from(event.serialNumber || []).map(b => b.toString(16).padStart(2,'0')).join('').toUpperCase();
+
+            if (authorizedUIDs.includes(uid)) {
+              // السماح بالدخول وعرض الصفحة
+              document.getElementById('nfcMessage').style.display = 'none';
+              document.querySelector('.text-header').style.display = 'block';
+              document.querySelector('.center-container').style.display = 'flex';
+              updateDynamicText();
+            } else {
+              document.getElementById('nfcMessage').textContent = "شريحة غير مصرح بها! الوصول مرفوض.";
+            }
+          };
+        } catch (error) {
+          document.getElementById('nfcMessage').textContent = `خطأ أثناء مسح NFC: ${error}`;
+        }
+      } else {
+        document.getElementById('nfcMessage').textContent = "جهازك لا يدعم NFC أو المتصفح لا يدعم Web NFC.";
+      }
+    }
+
     function getIdFromUrl() {
       const params = new URLSearchParams(window.location.search);
       return params.get('id');
@@ -134,9 +123,7 @@
         let formattedText = "";
         words.forEach((word, index) => {
           formattedText += word + " ";
-          if ((index + 1) % 3 === 0) {
-            formattedText += "<br>"; // كل 3 كلمات ينزل لسطر
-          }
+          if ((index + 1) % 3 === 0) { formattedText += "<br>"; }
         });
         dynamicTextElem.innerHTML = formattedText.trim();
       } else {
@@ -144,7 +131,7 @@
       }
     }
 
-    updateDynamicText();
+    scanNFC();
   </script>
 
 </body>
