--- a/index.html
+++ b/index.html
@@ -18,20 +18,12 @@
       background-size: 400% 400%;
       animation: waveBackground 15s ease infinite;
       position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     @keyframes waveBackground {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
-    }
-
-    /* كل المحتوى مخفي افتراضياً */
-    .text-header, .center-container {
-      display: none;
     }
 
     .text-header {
@@ -46,22 +38,71 @@
       user-select: none;
     }
 
-    .text-header .line1 { font-size: 48px; margin: 0; letter-spacing: 4px; white-space: nowrap; }
-    .text-header .this-word { display: inline-block; }
-    .text-header .brand-word { display: inline-block; margin-left: 10px; }
-    .text-header .line2 { font-size: 48px; margin: 0; color: rgba(0, 60, 255, 0.5); white-space: nowrap; }
-    #dynamicText { display: block; margin-top: 160px; color: #800000; font-size: 52px; font-weight: bold; text-align: center; }
+    .text-header .line1 {
+      font-size: 48px;
+      margin: 0;
+      letter-spacing: 4px;
+      white-space: nowrap;
+    }
 
-    .center-container { position: absolute; top: 65%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: flex-start; gap: 20px; z-index: 2; pointer-events: none; }
-    .watermark { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); transform: translateY(40px); }
-    .big-check { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); }
+    .text-header .this-word {
+      display: inline-block;
+    }
 
-    #nfcMessage { color: #000; font-size: 32px; font-weight: bold; text-align: center; }
+    .text-header .brand-word {
+      display: inline-block;
+      margin-left: 10px;
+    }
+
+    .text-header .line2 {
+      font-size: 48px;
+      margin: 0;
+      position: relative;
+      color: rgba(0, 60, 255, 0.5);
+      user-select: text;
+      pointer-events: auto;
+      white-space: nowrap;
+    }
+
+    #dynamicText {
+      display: block;
+      margin-top: 160px; 
+      color: #800000; 
+      font-size: 52px; 
+      font-weight: bold;
+      user-select: text;
+      pointer-events: auto;
+      line-height: 1.6;
+      text-align: center;
+    }
+
+    .center-container {
+      position: absolute;
+      top: 65%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+      z-index: 2;
+      pointer-events: none;
+    }
+
+    .watermark {
+      font-size: 200px;
+      font-weight: bold;
+      color: rgba(0, 60, 255, 0.2);
+      transform: translateY(40px);
+    }
+
+    .big-check {
+      font-size: 200px;
+      font-weight: bold;
+      color: rgba(0, 60, 255, 0.2);
+    }
   </style>
 </head>
 <body>
-
-  <div id="nfcMessage">انتظر لمس شريحة NFC المصرح بها...</div>
 
   <div class="text-header">
     <h1 class="line1">
@@ -70,7 +111,7 @@
     </h1>
     <h1 class="line2">
       Is
-      <span id="dynamicText"></span>
+      <span id="dynamicText">امسح شريحة NFC</span>
     </h1>
   </div>
 
@@ -80,58 +121,47 @@
   </div>
 
   <script>
-    // ضع الرقم التسلسلي للشريحة المصرح بها هنا (بدون نقط أو مسافات، بأحرف كبيرة)
-    const authorizedUIDs = ["043B11C53F80"]; // مثال لشريحة واحدة
+    // ===== قائمة شرائح NFC المسموح لها =====
+    const allowedNFCTags = [
+      "043B7FA2A51C90",
+      "03B12F9A6E4C71",
+      "05C987A1234D66"
+    ];
 
-    async function scanNFC() {
+    // دالة للتحقق من الشريحة
+    function isAllowed(tagUID) {
+      return allowedNFCTags.includes(tagUID);
+    }
+
+    // ===== Web NFC =====
+    async function startNFC() {
       if ('NDEFReader' in window) {
+        const ndef = new NDEFReader();
         try {
-          const ndef = new NDEFReader();
           await ndef.scan();
-
+          ndef.onreadingerror = () => {
+            document.getElementById('dynamicText').innerText = "خطأ في قراءة الشريحة";
+          };
           ndef.onreading = event => {
-            const uid = Array.from(event.serialNumber || []).map(b => b.toString(16).padStart(2,'0')).join('').toUpperCase();
-
-            if (authorizedUIDs.includes(uid)) {
-              // السماح بالدخول وعرض الصفحة
-              document.getElementById('nfcMessage').style.display = 'none';
-              document.querySelector('.text-header').style.display = 'block';
-              document.querySelector('.center-container').style.display = 'flex';
-              updateDynamicText();
+            const tagUID = Array.from(new Uint8Array(event.serialNumber))
+                                .map(b => b.toString(16).padStart(2, '0'))
+                                .join('').toUpperCase();
+            
+            if (isAllowed(tagUID)) {
+              document.getElementById('dynamicText').innerText = "تم السماح بالوصول!";
             } else {
-              document.getElementById('nfcMessage').textContent = "شريحة غير مصرح بها! الوصول مرفوض.";
+              document.getElementById('dynamicText').innerText = "🚫 الوصول مرفوض";
             }
           };
         } catch (error) {
-          document.getElementById('nfcMessage').textContent = `خطأ أثناء مسح NFC: ${error}`;
+          document.getElementById('dynamicText').innerText = "فشل تشغيل NFC: " + error;
         }
       } else {
-        document.getElementById('nfcMessage').textContent = "جهازك لا يدعم NFC أو المتصفح لا يدعم Web NFC.";
+        document.getElementById('dynamicText').innerText = "متصفحك لا يدعم NFC";
       }
     }
 
-    function getIdFromUrl() {
-      const params = new URLSearchParams(window.location.search);
-      return params.get('id');
-    }
-
-    function updateDynamicText() {
-      const id = getIdFromUrl();
-      const dynamicTextElem = document.getElementById('dynamicText');
-      if (id) {
-        const words = id.split(" ");
-        let formattedText = "";
-        words.forEach((word, index) => {
-          formattedText += word + " ";
-          if ((index + 1) % 3 === 0) { formattedText += "<br>"; }
-        });
-        dynamicTextElem.innerHTML = formattedText.trim();
-      } else {
-        dynamicTextElem.textContent = '';
-      }
-    }
-
-    scanNFC();
+    startNFC();
   </script>
 
 </body>
