--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
     #dynamicText {
       display: block;
-      margin-top: 160px; 
-      color: #800000; 
-      font-size: 52px; 
+      margin-top: 160px; /* ثمان أسطر تقريباً */
+      color: #800000;   /* أحمر غامق أكثر */
+      font-size: 52px;  /* كبير */
       font-weight: bold;
       user-select: text;
       pointer-events: auto;
@@ -111,7 +111,7 @@
     </h1>
     <h1 class="line2">
       Is
-      <span id="dynamicText">امسح شريحة NFC</span>
+      <span id="dynamicText"></span>
     </h1>
   </div>
 
@@ -121,47 +121,30 @@
   </div>
 
   <script>
-    // ===== قائمة شرائح NFC المسموح لها =====
-    const allowedNFCTags = [
-      "043B7FA2A51C90",
-      "03B12F9A6E4C71",
-      "05C987A1234D66"
-    ];
-
-    // دالة للتحقق من الشريحة
-    function isAllowed(tagUID) {
-      return allowedNFCTags.includes(tagUID);
+    function getIdFromUrl() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get('id');
     }
 
-    // ===== Web NFC =====
-    async function startNFC() {
-      if ('NDEFReader' in window) {
-        const ndef = new NDEFReader();
-        try {
-          await ndef.scan();
-          ndef.onreadingerror = () => {
-            document.getElementById('dynamicText').innerText = "خطأ في قراءة الشريحة";
-          };
-          ndef.onreading = event => {
-            const tagUID = Array.from(new Uint8Array(event.serialNumber))
-                                .map(b => b.toString(16).padStart(2, '0'))
-                                .join('').toUpperCase();
-            
-            if (isAllowed(tagUID)) {
-              document.getElementById('dynamicText').innerText = "تم السماح بالوصول!";
-            } else {
-              document.getElementById('dynamicText').innerText = "🚫 الوصول مرفوض";
-            }
-          };
-        } catch (error) {
-          document.getElementById('dynamicText').innerText = "فشل تشغيل NFC: " + error;
-        }
+    function updateDynamicText() {
+      const id = getIdFromUrl();
+      const dynamicTextElem = document.getElementById('dynamicText');
+      if (id) {
+        const words = id.split(" ");
+        let formattedText = "";
+        words.forEach((word, index) => {
+          formattedText += word + " ";
+          if ((index + 1) % 3 === 0) {
+            formattedText += "<br>"; // كل 3 كلمات ينزل لسطر
+          }
+        });
+        dynamicTextElem.innerHTML = formattedText.trim();
       } else {
-        document.getElementById('dynamicText').innerText = "متصفحك لا يدعم NFC";
+        dynamicTextElem.textContent = '';
       }
     }
 
-    startNFC();
+    updateDynamicText();
   </script>
 
 </body>
