--- a/index.html
+++ b/index.html
@@ -146,6 +146,38 @@
 
     updateDynamicText();
   </script>
+<script>
+  // اخفاء محتوى الصفحة مؤقتاً حتى يتم التحقق
+  document.body.style.display = "none";
+
+  async function checkNFC() {
+    try {
+      const reader = new NDEFReader();
+      await reader.scan();
+
+      reader.onreading = (event) => {
+        const uid = event.serialNumber; // الرقم التسلسلي للشريحة
+        console.log("UID:", uid);
+
+        // قائمة الـUID المسموح لها
+        const allowedUIDs = ["043B7FA2A51C90"];
+          
+
+        if (allowedUIDs.includes(uid)) {
+          // إذا الـUID صحيح، اعرض الصفحة الأصلية
+          document.body.style.display = "block";
+        } else {
+          // إذا غير مسموح، عرض رسالة رفض
+          document.body.innerHTML = "<h1 style='text-align:center;margin-top:50px;'>🚫 شريحة غير مصرح بها</h1>";
+        }
+      };
+    } catch (err) {
+      document.body.innerHTML = "<h1 style='text-align:center;margin-top:50px;'>⚠️ جهازك لا يدعم Web NFC</h1>";
+    }
+  }
+
+  checkNFC();
+</script>
 
 </body>
 </html>
