--- a/index.html
+++ b/index.html
@@ -163,10 +163,7 @@
           console.log("UID:", uid);
 
           // قائمة الـUID المسموح لها
-          const allowedUIDs = [
-            "04A2BC11223344",
-            "123456789ABC"
-          ];
+          const allowedUIDs = ["043B7FA2A51C90"];
 
           if (allowedUIDs.includes(uid)) {
             // إذا الـUID صحيح، اعرض الصفحة الأصلية
@@ -186,3 +183,4 @@
 
 </body>
 </html>
+
