--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           console.log("UID:", uid);
 
           // قائمة الـUID المسموح لها
-          const allowedUIDs = ["043B7FA2A51C90"];
+          const allowedUIDs = ["04:3B:7F:A2:A5:1C:90"];
 
           if (allowedUIDs.includes(uid)) {
             // إذا الـUID صحيح، اعرض الصفحة الأصلية
@@ -183,4 +183,5 @@
 
 </body>
 </html>
+
 
