--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
       100% { background-position: 0% 50%; }
     }
 
+    .nfc-check {
+      position: absolute;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      z-index: 10;
+    }
+
+    .nfc-check p {
+      font-size: 18px;
+      color: #000;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    .nfc-check input {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      width: 250px;
+      margin-bottom: 10px;
+    }
+
+    .nfc-check button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background: #0040ff;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    .nfc-check button:hover {
+      background: #002db3;
+    }
+
     .text-header {
       position: absolute;
       top: 28%;
@@ -104,6 +143,14 @@
 </head>
 <body>
 
+  <!-- جزء إدخال الرقم والتحقق -->
+  <div class="nfc-check">
+    <p>Read the NFC sticker through the NFC Tools app, extract the serial number, put it here, and then check</p>
+    <input type="text" id="serialInput" placeholder="Enter serial number" />
+    <br>
+    <button onclick="checkSerial()">Check</button>
+  </div>
+
   <div class="text-header">
     <h1 class="line1">
       <span class="this-word">This</span>
@@ -121,6 +168,18 @@
   </div>
 
   <script>
+    // الرقم الصحيح اللي تسمح به
+    const allowedSerial = "123456789"; // ← غيره برقمك الصحيح
+
+    function checkSerial() {
+      const input = document.getElementById("serialInput").value.trim();
+      if (input === allowedSerial) {
+        window.location.href = "https://github.com/"; // ضع هنا رابط صفحتك
+      } else {
+        alert("❌ الرقم غير صحيح!");
+      }
+    }
+
     function getIdFromUrl() {
       const params = new URLSearchParams(window.location.search);
       return params.get('id');
@@ -135,7 +194,7 @@
         words.forEach((word, index) => {
           formattedText += word + " ";
           if ((index + 1) % 3 === 0) {
-            formattedText += "<br>"; // كل 3 كلمات ينزل لسطر
+            formattedText += "<br>";
           }
         });
         dynamicTextElem.innerHTML = formattedText.trim();
