--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
       100% { background-position: 0% 50%; }
     }
 
+    /* شاشة التحقق */
     .nfc-check {
       position: absolute;
-      top: 10%;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translate(-50%, -50%);
       text-align: center;
       z-index: 10;
     }
@@ -63,6 +64,11 @@
 
     .nfc-check button:hover {
       background: #002db3;
+    }
+
+    /* الواجهة الأصلية (مخفية بالبداية) */
+    .main-content {
+      display: none;
     }
 
     .text-header {
@@ -105,9 +111,9 @@
 
     #dynamicText {
       display: block;
-      margin-top: 160px; /* ثمان أسطر تقريباً */
-      color: #800000;   /* أحمر غامق أكثر */
-      font-size: 52px;  /* كبير */
+      margin-top: 160px;
+      color: #800000;
+      font-size: 52px;
       font-weight: bold;
       user-select: text;
       pointer-events: auto;
@@ -143,38 +149,44 @@
 </head>
 <body>
 
-  <!-- جزء إدخال الرقم والتحقق -->
-  <div class="nfc-check">
+  <!-- شاشة إدخال الرقم -->
+  <div class="nfc-check" id="checkScreen">
     <p>Read the NFC sticker through the NFC Tools app, extract the serial number, put it here, and then check</p>
     <input type="text" id="serialInput" placeholder="Enter serial number" />
     <br>
     <button onclick="checkSerial()">Check</button>
   </div>
 
-  <div class="text-header">
-    <h1 class="line1">
-      <span class="this-word">This</span>
-      <span class="brand-word">Brand</span>
-    </h1>
-    <h1 class="line2">
-      Is
-      <span id="dynamicText"></span>
-    </h1>
-  </div>
+  <!-- الصفحة الأصلية (مخفية بالبداية) -->
+  <div class="main-content" id="mainContent">
+    <div class="text-header">
+      <h1 class="line1">
+        <span class="this-word">This</span>
+        <span class="brand-word">Brand</span>
+      </h1>
+      <h1 class="line2">
+        Is
+        <span id="dynamicText"></span>
+      </h1>
+    </div>
 
-  <div class="center-container">
-    <div class="watermark">B</div>
-    <div class="big-check">✔</div>
+    <div class="center-container">
+      <div class="watermark">B</div>
+      <div class="big-check">✔</div>
+    </div>
   </div>
 
   <script>
-    // الرقم الصحيح اللي تسمح به
-    const allowedSerial = "123456789"; // ← غيره برقمك الصحيح
+    // الرقم الصحيح
+    const allowedSerial = "123456789"; // ← غيّره بالرقم الصحيح
 
     function checkSerial() {
       const input = document.getElementById("serialInput").value.trim();
       if (input === allowedSerial) {
-        window.location.href = "https://github.com/"; // ضع هنا رابط صفحتك
+        // إخفاء شاشة التحقق
+        document.getElementById("checkScreen").style.display = "none";
+        // إظهار الصفحة الأصلية
+        document.getElementById("mainContent").style.display = "block";
       } else {
         alert("❌ الرقم غير صحيح!");
       }
