--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
   <script>
     // الرقم الصحيح
-    const allowedSerial = "123456789"; // ← غيّره بالرقم الصحيح
+    const allowedSerial = "04:3B:7F:A2:A5:1C:90"; // ← غيّره بالرقم الصحيح
 
     function checkSerial() {
       const input = document.getElementById("serialInput").value.trim();
@@ -220,3 +220,4 @@
 
 </body>
 </html>
+
