--- a/index.html
+++ b/index.html
@@ -176,38 +176,55 @@
     </div>
   </div>
 
-  <script>
-    // الرقم الصحيح
-    const allowedSerial = "04:3B:7F:A2:A5:1C:90"; // ← غيّره بالرقم الصحيح
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
+  <script>
+    // إعداد Firebase
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://nfc-serial-number-default-rtdb.firebaseio.com/",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    // تهيئة Firebase
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // التحقق من الرقم
     function checkSerial() {
       const input = document.getElementById("serialInput").value.trim();
-      if (input === allowedSerial) {
-        // إخفاء شاشة التحقق
-        document.getElementById("checkScreen").style.display = "none";
-        // إظهار الصفحة الأصلية
-        document.getElementById("mainContent").style.display = "block";
-      } else {
-        alert("❌ الرقم غير صحيح!");
-      }
+      const ref = database.ref("allowedSerials");
+
+      ref.once("value").then(snapshot => {
+        const allowedSerials = snapshot.val();
+        if (allowedSerials && allowedSerials.includes(input)) {
+          document.getElementById("checkScreen").style.display = "none";
+          document.getElementById("mainContent").style.display = "block";
+        } else {
+          alert("❌ الرقم غير صحيح!");
+        }
+      }).catch(error => {
+        console.error("Firebase read error:", error);
+        alert("❌ حدث خطأ أثناء التحقق، حاول لاحقاً.");
+      });
     }
 
-    function getIdFromUrl() {
-      const params = new URLSearchParams(window.location.search);
-      return params.get('id');
-    }
-
+    // تحديث النص الديناميكي
     function updateDynamicText() {
-      const id = getIdFromUrl();
+      const id = new URLSearchParams(window.location.search).get("id");
       const dynamicTextElem = document.getElementById('dynamicText');
       if (id) {
         const words = id.split(" ");
         let formattedText = "";
         words.forEach((word, index) => {
           formattedText += word + " ";
-          if ((index + 1) % 3 === 0) {
-            formattedText += "<br>";
-          }
+          if ((index + 1) % 3 === 0) formattedText += "<br>";
         });
         dynamicTextElem.innerHTML = formattedText.trim();
       } else {
@@ -220,4 +237,3 @@
 
 </body>
 </html>
-
