--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8" />
   <title>Brand</title>
@@ -26,7 +26,6 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* شاشة التحقق */
     .nfc-check {
       position: absolute;
       top: 50%;
@@ -66,7 +65,6 @@
       background: #002db3;
     }
 
-    /* الواجهة الأصلية (مخفية بالبداية) */
     .main-content {
       display: none;
     }
@@ -83,23 +81,68 @@
       user-select: none;
     }
 
-    .text-header .line1 { font-size: 48px; margin: 0; letter-spacing: 4px; white-space: nowrap; }
-    .text-header .this-word { display: inline-block; }
-    .text-header .brand-word { display: inline-block; margin-left: 10px; }
-    .text-header .line2 { font-size: 48px; margin: 0; position: relative; color: rgba(0, 60, 255, 0.5); user-select: text; pointer-events: auto; white-space: nowrap; }
+    .text-header .line1 {
+      font-size: 48px;
+      margin: 0;
+      letter-spacing: 4px;
+      white-space: nowrap;
+    }
+
+    .text-header .this-word {
+      display: inline-block;
+    }
+
+    .text-header .brand-word {
+      display: inline-block;
+      margin-left: 10px;
+    }
+
+    .text-header .line2 {
+      font-size: 48px;
+      margin: 0;
+      position: relative;
+      color: rgba(0, 60, 255, 0.5);
+      user-select: text;
+      pointer-events: auto;
+      white-space: nowrap;
+    }
 
     #dynamicText {
-      display: block; margin-top: 160px; color: #800000; font-size: 52px; font-weight: bold;
-      user-select: text; pointer-events: auto; line-height: 1.6; text-align: center;
+      display: block;
+      margin-top: 160px;
+      color: #800000;
+      font-size: 52px;
+      font-weight: bold;
+      user-select: text;
+      pointer-events: auto;
+      line-height: 1.6;
+      text-align: center;
     }
 
     .center-container {
-      position: absolute; top: 65%; left: 50%; transform: translate(-50%, -50%);
-      display: flex; align-items: flex-start; gap: 20px; z-index: 2; pointer-events: none;
+      position: absolute;
+      top: 65%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+      z-index: 2;
+      pointer-events: none;
     }
 
-    .watermark { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); transform: translateY(40px); }
-    .big-check { font-size: 200px; font-weight: bold; color: rgba(0, 60, 255, 0.2); }
+    .watermark {
+      font-size: 200px;
+      font-weight: bold;
+      color: rgba(0, 60, 255, 0.2);
+      transform: translateY(40px);
+    }
+
+    .big-check {
+      font-size: 200px;
+      font-weight: bold;
+      color: rgba(0, 60, 255, 0.2);
+    }
   </style>
 </head>
 <body>
@@ -132,9 +175,8 @@
   </div>
 
   <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
     // إعداد Firebase
     const firebaseConfig = {
@@ -143,43 +185,49 @@
       databaseURL: "https://nfc-serial-number-default-rtdb.firebaseio.com/",
       projectId: "YOUR_PROJECT_ID",
       storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      messagingSenderId: "YOUR_SENDER_ID",
       appId: "YOUR_APP_ID"
     };
 
     firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
+    const db = firebase.database();
+
+    let allowedSerials = [];
+
+    // جلب قائمة الأرقام المسموح بها من Firebase
+    db.ref("allowedSerials").once("value").then(snapshot => {
+      if(snapshot.exists()) {
+        allowedSerials = Object.values(snapshot.val()); // تأخذ القيم كـ array
+        console.log("Allowed serials loaded:", allowedSerials);
+      }
+    });
 
     function checkSerial() {
       const input = document.getElementById("serialInput").value.trim();
-      const ref = database.ref("allowedSerials");
-
-      ref.once("value").then(snapshot => {
-        const data = snapshot.val();
-        // تحويل المفاتيح إلى مصفوفة أرقام مسموح بها
-        const allowedSerials = Object.values(data || {}).map(String);
-        if (allowedSerials.includes(input)) {
-          document.getElementById("checkScreen").style.display = "none";
-          document.getElementById("mainContent").style.display = "block";
-        } else {
-          alert("❌ الرقم غير صحيح!");
-        }
-      }).catch(error => {
-        console.error("Firebase read error:", error);
-        alert("❌ حدث خطأ أثناء التحقق، حاول لاحقاً.");
-      });
+      if(allowedSerials.includes(input)) {
+        document.getElementById("checkScreen").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
+      } else {
+        alert("❌ الرقم غير صحيح!");
+      }
     }
 
-    // تحديث النص الديناميكي
+    function getIdFromUrl() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get('id');
+    }
+
     function updateDynamicText() {
-      const id = new URLSearchParams(window.location.search).get("id");
+      const id = getIdFromUrl();
       const dynamicTextElem = document.getElementById('dynamicText');
       if (id) {
         const words = id.split(" ");
         let formattedText = "";
         words.forEach((word, index) => {
           formattedText += word + " ";
-          if ((index + 1) % 3 === 0) formattedText += "<br>";
+          if ((index + 1) % 3 === 0) {
+            formattedText += "<br>";
+          }
         });
         dynamicTextElem.innerHTML = formattedText.trim();
       } else {
