--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
   <script>
     // قائمة أرقام السيريال المسموح بها
-    const allowedSerials = [ "04:3B:7F:A2:A5:1C:90","04:3B:82:A2:A5:1C:90" ];
+    const allowedSerials = [ "04:3B:7F:A2:A5:1C:90","04:3B:82:A2:A5:1C:90","04:3B:7E:A2:A5:1C:90" ];
     function checkSerial() {
       const input = document.getElementById("serialInput").value.trim();
       if (allowedSerials.includes(input)) {
@@ -219,4 +219,5 @@
 
 </body>
 </html>
+
 
