--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Brand</title>
   <style>
     body {
@@ -145,6 +146,42 @@
       font-weight: bold;
       color: rgba(0, 60, 255, 0.2);
     }
+
+    /* إضافات لتناسب الهاتف */
+    @media only screen and (max-width: 480px) {
+      .nfc-check input {
+        width: 180px;
+        font-size: 14px;
+        padding: 8px;
+      }
+
+      .nfc-check button {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
+
+      .text-header .line1,
+      .text-header .line2 {
+        font-size: 28px;
+        letter-spacing: 2px;
+      }
+
+      #dynamicText {
+        font-size: 32px;
+        margin-top: 100px;
+      }
+
+      .center-container {
+        flex-direction: column;
+        gap: 10px;
+        top: 70%;
+      }
+
+      .watermark,
+      .big-check {
+        font-size: 120px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -219,8 +256,3 @@
 
 </body>
 </html>
-
-
-
-
-
