--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
       white-space: nowrap;
     }
 
+    /* رفع النص الأحمر (#dynamicText) أعلى قليلاً */
     #dynamicText {
       display: block;
-      margin-top: 160px;
+      margin-top: 60px; /* كان 160px سابقاً، الآن أعلى بمقدار تقريباً 3 أسطر */
       color: #800000;
       font-size: 52px;
       font-weight: bold;
@@ -168,7 +169,7 @@
 
       #dynamicText {
         font-size: 32px;
-        margin-top: 100px;
+        margin-top: 50px; /* مناسب للهواتف */
       }
 
       .center-container {
