--- a/index.html
+++ b/index.html
@@ -1,258 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Brand</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(
-        135deg,
-        rgba(64, 224, 208, 0.7),
-        rgba(0, 191, 255, 0.9),
-        rgba(0, 128, 255, 0.8)
-      );
-      background-size: 400% 400%;
-      animation: waveBackground 15s ease infinite;
-      position: relative;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>صفحة هاتف بخلفية حمراء شفافة</title>
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #222; /* خلفية الصفحة الكاملة (رمادية غامقة فقط للتوضيح) */
+  }
 
-    @keyframes waveBackground {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* شاشة التحقق */
-    .nfc-check {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 10;
-    }
-
-    .nfc-check p {
-      font-size: 18px;
-      color: #000;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    .nfc-check input {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 6px;
-      border: 1px solid #333;
-      width: 250px;
-      margin-bottom: 10px;
-    }
-
-    .nfc-check button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      background: #0040ff;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    .nfc-check button:hover {
-      background: #002db3;
-    }
-
-    /* الواجهة الأصلية (مخفية بالبداية) */
-    .main-content {
-      display: none;
-    }
-
-    .text-header {
-      position: absolute;
-      top: 28%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 3;
-      color: rgba(0, 60, 255, 0.5);
-      pointer-events: none;
-      user-select: none;
-    }
-
-    .text-header .line1 {
-      font-size: 48px;
-      margin: 0;
-      letter-spacing: 4px;
-      white-space: nowrap;
-    }
-
-    .text-header .this-word {
-      display: inline-block;
-    }
-
-    .text-header .brand-word {
-      display: inline-block;
-      margin-left: 10px;
-    }
-
-    .text-header .line2 {
-      font-size: 48px;
-      margin: 0;
-      position: relative;
-      color: rgba(0, 60, 255, 0.5);
-      user-select: text;
-      pointer-events: auto;
-      white-space: nowrap;
-    }
-
-    /* رفع النص الأحمر (#dynamicText) أعلى قليلاً */
-    #dynamicText {
-      display: block;
-      margin-top: 60px; /* كان 160px سابقاً، الآن أعلى بمقدار تقريباً 3 أسطر */
-      color: #800000;
-      font-size: 52px;
-      font-weight: bold;
-      user-select: text;
-      pointer-events: auto;
-      line-height: 1.6;
-      text-align: center;
-    }
-
-    .center-container {
-      position: absolute;
-      top: 65%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
-      z-index: 2;
-      pointer-events: none;
-    }
-
-    .watermark {
-      font-size: 200px;
-      font-weight: bold;
-      color: rgba(0, 60, 255, 0.2);
-      transform: translateY(40px);
-    }
-
-    .big-check {
-      font-size: 200px;
-      font-weight: bold;
-      color: rgba(0, 60, 255, 0.2);
-    }
-
-    /* إضافات لتناسب الهاتف */
-    @media only screen and (max-width: 480px) {
-      .nfc-check input {
-        width: 180px;
-        font-size: 14px;
-        padding: 8px;
-      }
-
-      .nfc-check button {
-        font-size: 14px;
-        padding: 8px 16px;
-      }
-
-      .text-header .line1,
-      .text-header .line2 {
-        font-size: 28px;
-        letter-spacing: 2px;
-      }
-
-      #dynamicText {
-        font-size: 32px;
-        margin-top: 50px; /* مناسب للهواتف */
-      }
-
-      .center-container {
-        flex-direction: column;
-        gap: 10px;
-        top: 70%;
-      }
-
-      .watermark,
-      .big-check {
-        font-size: 120px;
-      }
-    }
-  </style>
+  .phone {
+    width: 360px;   /* عرض الهاتف */
+    height: 640px;  /* طول الهاتف */
+    background-color: rgba(255, 0, 0, 0.5); /* أحمر شفاف */
+    border-radius: 20px; /* زوايا مستديرة للهاتف */
+    box-shadow: 0 0 15px rgba(0,0,0,0.5); /* ظل خفيف */
+  }
+</style>
 </head>
 <body>
-
-  <!-- شاشة إدخال الرقم -->
-  <div class="nfc-check" id="checkScreen">
-    <p>Read the NFC sticker through the NFC Tools app, extract the serial number, put it here, and then check</p>
-    <input type="text" id="serialInput" placeholder="Enter serial number" />
-    <br>
-    <button onclick="checkSerial()">Check</button>
-  </div>
-
-  <!-- الصفحة الأصلية (مخفية بالبداية) -->
-  <div class="main-content" id="mainContent">
-    <div class="text-header">
-      <h1 class="line1">
-        <span class="this-word">This</span>
-        <span class="brand-word">Brand</span>
-      </h1>
-      <h1 class="line2">
-        Is
-        <span id="dynamicText"></span>
-      </h1>
-    </div>
-
-    <div class="center-container">
-      <div class="watermark">B</div>
-      <div class="big-check">✔</div>
-    </div>
-  </div>
-
-  <script>
-    const allowedSerials = [ "04:3B:7F:A2:A5:1C:90","04:3B:82:A2:A5:1C:90","04:3B:7E:A2:A5:1C:90" ];
-    function checkSerial() {
-      const input = document.getElementById("serialInput").value.trim();
-      if (allowedSerials.includes(input)) {
-        document.getElementById("checkScreen").style.display = "none";
-        document.getElementById("mainContent").style.display = "block";
-      } else {
-        alert("❌  Incorrect serial number !");
-      }
-    }
-
-    function getIdFromUrl() {
-      const params = new URLSearchParams(window.location.search);
-      return params.get('id');
-    }
-
-    function updateDynamicText() {
-      const id = getIdFromUrl();
-      const dynamicTextElem = document.getElementById('dynamicText');
-      if (id) {
-        const words = id.split(" ");
-        let formattedText = "";
-        words.forEach((word, index) => {
-          formattedText += word + " ";
-          if ((index + 1) % 3 === 0) {
-            formattedText += "<br>";
-          }
-        });
-        dynamicTextElem.innerHTML = formattedText.trim();
-      } else {
-        dynamicTextElem.textContent = '';
-      }
-    }
-
-    updateDynamicText();
-  </script>
-
+  <div class="phone"></div>
 </body>
 </html>
-
-
